--- a/Home.html
+++ b/Home.html
@@ -434,8 +434,8 @@
                             </a>
                         </div>
                         <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Travel</a></li>
+                            <li><a href="Home.html">Home</a></li>
+                            <li><a href="Garely.html">G</a></li>
                             <li><a href="#">About</a></li>
                             <li><a href="#">Contact</a></li>
                         </ul>
