--- a/tess.html
+++ b/tess.html
@@ -1,21 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>เครื่องหมายชี้ขึ้น</title>
     <style>
-        .arrow-up {
-            display: inline-block;
-            width: 0;
-            height: 0;
-            border-left: 10px solid transparent;
-            border-right: 10px solid transparent;
-            border-bottom: 10px solid black;
-        }
+        .container {
+  display: flex;
+  flex-direction: row;
+  width: 97%;
+  height: 200px;
+  padding: 1rem;
+  column-gap: 1rem;
+}
+
+.card {
+  flex-grow: 1;
+  background-color: lightblue;
+  border-radius: 1rem;
+  transition: flex-grow 1s ease;
+}
+
+.card:hover {
+  flex-grow: 6;
+  background-color: blue;
+}
     </style>
 </head>
+
 <body>
-    <div class="arrow-up"></div>
+    <div class="container">
+        <div class="card" style="background-image: url('https://t3.ftcdn.net/jpg/02/52/38/80/360_F_252388016_KjPnB9vglSCuUJAumCDNbmMzGdzPAucK.jpg');">
+
+        </div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+        <div class="card"></div>
+    </div>
 </body>
+
 </html>
