--- a/main2 copy 3.html
+++ b/main2 copy 3.html
@@ -526,9 +526,9 @@
                     <p id="location-description" style="color: rgb(187, 163, 55); font-size: x-large;">Select a location
                     </p>
                     <p id="location-address"></p>
-                    <iframe id="location-map" src="" width="100%" height="300" frameborder="0" style="border:0;"
-                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
-                        allowfullscreen></iframe>
+                    <iframe id="location-map" src="" width="50%" height="300"  style="border:0;"
+                        allowfullscreen="" loading="lazy" 
+                       ></iframe>
                 </div>
             </div>
 
