--- a/a.html
+++ b/a.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        /*  หน้าหลัก  */
+
         .container a {
             text-decoration: none;
         }
@@ -16,6 +16,19 @@
 
         .container {
             min-height: 100vh;
+            padding-bottom: 50px;
+            margin: 0 auto;
+            position: relative;
+        }
+        .container a{
+            text-decoration: none;
+
+        }
+        .container ul {
+            list-style: none;
+        }
+        .container {
+            min-width: 100vh;
             padding-bottom: 50px;
             margin: 0 auto;
             position: relative;
@@ -40,6 +53,8 @@
             background-size: cover;
             background-position: center;
         }
+
+        
 
         .navBar {
             display: flex;
@@ -168,7 +183,6 @@
             box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22);
         }
 
-        /* เเถบเลื่อนลง */
         #scrollDown {
             position: fixed;
             bottom: 20px;
@@ -276,5 +290,4 @@
         });
     </script>
 </body>
-
 </html>
