--- a/main2 copy 2.html
+++ b/main2 copy 2.html
@@ -227,12 +227,6 @@
             letter-spacing: 2.8px;
         }
 
-        .navBar .text {
-            display: flex;
-            justify-content: flex-start;
-            align-items: center;
-        }
-
         .txt h1 {
             font-size: 5rem;
         }
@@ -240,10 +234,6 @@
         .phuket p {
             font-size: 1.5rem;
             opacity: 0.5;
-        }
-
-        .tnx h2 i {
-            color: #fd7e13;
         }
 
         .card div {
@@ -446,7 +436,7 @@
 
                     <div class="content">
                         <div class="phuket" style="width:100%;">
-                            <div class="tnx">
+                            <div class="tnt">
                                 <h2><i class="fas fa-map-marker-alt"></i> Thailand</h2>
                             </div>
                             <div class="txt">
