--- a/tess5.3.html
+++ b/tess5.3.html
@@ -103,7 +103,7 @@
         </div>
 
         <div class="content">
-            <div class="phuket">
+            <div class="phuket" style="width: 100%;">
                 <div class="tnt">
                     <h2>Thailand</h2>
                 </div>
