--- a/main2 copy 2.html
+++ b/main2 copy 2.html
@@ -512,13 +512,12 @@
                 </div>
 
                 <div class="details-container">
-                    <h2 id="location-title" style="font-size: xx-large; ">Beach</h2>
-                    <p id="location-description" style="color: rgb(187, 163, 55); font-size: x-large;">Select a location
+                    <h2 id="location-title" >Beach</h2>
+                    <p id="location-description" >Select a location
                     </p>
                     <p id="location-address"></p>
-                    <iframe id="location-map" src="" width="100%" height="300" frameborder="0" style="border:0;"
-                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
-                        allowfullscreen></iframe>
+                    <iframe id="location-map" src="" width="100%" height="300" frameborder="0" allowfullscreen></iframe>
+
                 </div>
             </div>
 
