--- a/c.html
+++ b/c.html
@@ -51,8 +51,7 @@
             padding: 10px;
             box-sizing: border-box;
             font-size: 16px;
-            border-bottom-left-radius: 4px;
-            border-bottom-right-radius: 4px;
+            border-radius: 0 0 4px 4px;
         }
 
         .grid-item:hover .image-wrapper {
