--- a/c.html
+++ b/c.html
@@ -40,7 +40,6 @@
         }
 
         .image-text {
-            /* เเถบสีดำหลังตัวอักษรบนภาพ */
             position: absolute;
             bottom: 0;
             left: 0;
@@ -66,7 +65,7 @@
             border-left: 1px solid rgba(255, 255, 255, 0.3);
             height: 100vh;
             position: relative;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 8px #0001;
         }
 
         #location-title {
