--- a/c.html
+++ b/c.html
@@ -3,144 +3,196 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CodePen - Onscroll Animation: Dynamic Content Scroll with ScrollMagic</title>
     <style>
-        .grid-container {
-            display: flex;
-            flex-direction: column;
-            width: 25%;
-            float: left;
-            padding: 20px;
-            height: 750px;
-            overflow-y: auto;
+        :root {
+            --primary: #212121;
+            --secondary: #515151;
+            --white: #ffffff;
         }
 
-        .grid-item {
-            margin-bottom: 10px;
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        body,
+        html {
+            overflow-x: hidden;
+        }
+
+        body {
+            background-color: var(--primary);
+            height: 100%;
+            color: var(--white);
+        }
+
+        h1,
+        h2,
+        h3 {
+            margin-bottom: 30px;
+            font-size: 24px;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            -webkit-text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+            font-family: "Poppins", sans-serif;
+            font-weight: 500;
+            color: var(--white);
+            letter-spacing: 1.2px;
+        }
+
+        p {
+            font-size: 45px;
+            line-height: 1.4;
+            font-family: "Titillium Web", sans-serif;
+            font-weight: 200;
+        }
+
+        .event {
             position: relative;
-        }
-
-        .image-wrapper {
-            position: relative;
-            display: inline-block;
-            transition: transform 0.2s;
-        }
-
-        .grid-item img {
-            display: block;
-            width: 100%;
-            border: 2px solid #ddd;
-            border-radius: 4px;
-            transition: transform 0.2s;
-        }
-
-        .grid-item img:hover {
-            transform: scale(1.05);
-        }
-
-        .image-text {
-            /* เเถบสีดำหลังตัวอักษรบนภาพ */
-            position: absolute;
-            bottom: 0;
-            left: 0;
-            background: rgba(0, 0, 0, 0.5);
-            color: #fff;
-            width: 101%;
-            text-align: center;
-            padding: 10px;
-            box-sizing: border-box;
-            font-size: 16px;
-            border-bottom-left-radius: 4px;
-            border-bottom-right-radius: 4px;
-        }
-
-        .grid-item:hover .image-wrapper {
-            transform: scale(1.05);
-        }
-
-        .details-container {
-            margin-left: 30%;
-            padding: 20px;
-            background: rgba(255, 255, 255, 0.6);
-            backdrop-filter: blur(0.5px);
-            border-left: 1px solid rgba(255, 255, 255, 0.3);
-            height: 100vh;
-            position: relative;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        #location-title {
-            margin-top: 0;
-        }
-
-        #location-map {
-            margin-top: 20px;
-            border-radius: 8px;
             overflow: hidden;
+            height: 100svh;
+            width: 100vw;
+            z-index: 1;
+            background-size: cover;
+            background-position: center center;
+            background-repeat: no-repeat;
+        }
+
+        .event::before {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1;
+        }
+
+        #section2.event::before,
+        #section3.event::before,
+        #section4.event::before,
+        #section5.event::before,
+        #section6.event::before {
+            background-color: rgb(86 82 76 / 57%);
+        }
+
+        #section2 {
+            background-image: url("https://images.twinkl.co.uk/tw1n/image/private/t_630/u/ux/what-is-a-beach-1_ver_1.jpg");
+        }
+
+        #section3 {
+            background-image: url("https://ik.imagekit.io/click2go/tours/00004/gallery/01_Ang_ThongNational_Marine_Park.jpg?tr=w-720");
+        }
+
+        #section4 {
+            background-image: url("https://images.bubbleup.com/width1920/quality35/mville2017/1-brand/1-margaritaville.com/gallery-media/220803-compasshotel-medford-pool-73868-1677873697-78625-1694019828.jpg");
+        }
+
+        #section5 {
+            background-image: url("https://media.istockphoto.com/id/1316145932/photo/table-top-view-of-spicy-food.jpg?s=612x612&w=0&k=20&c=eaKRSIAoRGHMibSfahMyQS6iFADyVy1pnPdy1O5rZ98=");
+        }
+
+        footer {
+            background-color: #333;
+            color: #fff;
+            padding: 20px;
+            font-family: Arial, sans-serif;
+        }
+
+        .footer-container {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            border-bottom: 2px solid #444;
+            padding-bottom: 20px;
+        }
+
+        .footer-container p {
+            font-size: large;
+        }
+
+        .footer-item {
+            flex: 1;
+            min-width: 200px;
+            margin: 10px;
+        }
+
+        .footer-item h3 {
+            margin-top: 0;
+            color: #f1c40f;
+        }
+
+        .footer-item p {
+            margin: 5px 0;
+        }
+
+        .footer-item a {
+            color: #f1c40f;
+            text-decoration: none;
+        }
+
+        .footer-item a:hover {
+            text-decoration: underline;
+        }
+
+        .footer-bottom {
+            text-align: center;
+            padding: 10px 0;
+            border-top: 2px solid #444;
+            background-color: #222;
+        }
+
+        .footer-bottom p {
+            font-size: large;
         }
     </style>
 </head>
 
 <body>
-    <div class="grid-container">
-        <div class="grid-item" data-title="Location 1" data-description="Description for Location 1"
-            data-address="123 Main St, City, Country"
-            data-map="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d147748.11616882743!2d100.918193843692!3d13.317471156760863!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sth!2sth!4v1723948765780!5m2!1sth!2sth">
-            <img src="https://media.istockphoto.com/id/1477967321/th/%E0%B8%A3%E0%B8%B9%E0%B8%9B%E0%B8%96%E0%B9%88%E0%B8%B2%E0%B8%A2/%E0%B8%AA%E0%B8%A0%E0%B8%B2%E0%B8%9E%E0%B8%97%E0%B8%B5%E0%B9%88%E0%B8%AA%E0%B8%A1%E0%B8%9A%E0%B8%B9%E0%B8%A3%E0%B8%93%E0%B9%8C%E0%B9%81%E0%B8%9A%E0%B8%9A%E0%B8%94%E0%B9%89%E0%B8%A7%E0%B8%A2%E0%B8%A1%E0%B8%AB%E0%B8%B2%E0%B8%AA%E0%B8%A1%E0%B8%B8%E0%B8%97%E0%B8%A3%E0%B8%AA%E0%B8%B5%E0%B8%9F%E0%B9%89%E0%B8%B2%E0%B8%AA%E0%B8%94%E0%B9%83%E0%B8%AA%E0%B9%81%E0%B8%A5%E0%B8%B0%E0%B8%AB%E0%B8%B2%E0%B8%94%E0%B8%97%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%AA%E0%B8%B5%E0%B8%82%E0%B8%B2%E0%B8%A7%E0%B9%83%E0%B8%99%E0%B8%A7%E0%B8%B1%E0%B8%99%E0%B8%97%E0%B8%B5%E0%B9%88%E0%B8%A1%E0%B8%B5%E0%B9%81%E0%B8%94%E0%B8%94.jpg?b=1&s=170667a&w=0&k=20&c=CFk2VJjiqWZIxxI6_0CpTb_AMUVyczcG0qQCkEGcrCE="
-                alt="Location 1">
-            <div class="image-text">Image 1</div>
-        </div>
-        <div class="grid-item" data-title="Location 2" data-description="Description for Location 2"
-            data-address="456 Another St, City, Country"
-            data-map="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d147748.11616882743!2d100.918193843692!3d13.317471156760863!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sth!2sth!4v1723948765780!5m2!1sth!2sth">
-            <img src="https://cdn.pixabay.com/photo/2024/02/09/13/03/beach-8563083_1280.jpg" alt="Location 2">
-            <div class="image-text">Image 2</div>
-        </div>
-        <div class="grid-item" data-title="Location 3" data-description="Description for Location 2"
-            data-address="456 Another St, City, Country"
-            data-map="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d147748.11616882743!2d100.918193843692!3d13.317471156760863!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sth!2sth!4v1723948765780!5m2!1sth!2sth">
-            <img src="https://cdn.pixabay.com/photo/2016/10/22/18/52/beach-1761410_640.jpg" alt="Location 3">
-            <div class="image-text">Image 3</div>
-        </div>
-        <div class="grid-item" data-title="Location 4" data-description="Description for Location 2"
-            data-address="456 Another St, City, Country"
-            data-map="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d147748.11616882743!2d100.918193843692!3d13.317471156760863!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sth!2sth!4v1723948765780!5m2!1sth!2sth">
-            <img src="https://cdn.pixabay.com/photo/2021/05/29/03/00/beach-6292382_640.jpg" alt="Location 4">
-            <div class="image-text">Image 4</div>
-        </div>
-    </div>
+    <section class="events-page">
+        <div id="section1" class="event">
 
-    <div class="details-container">
-        <h2 id="location-title">Beach</h2>
-        <p id="location-description">Select a location
-        </p>
-        <p id="location-address"></p>
-        <iframe id="location-map" src="" width="100%" height="300" frameborder="0" allowfullscreen></iframe>
-    </div>
-    <script>
-        document.addEventListener('DOMContentLoaded', function () {
-            const gridItems = document.querySelectorAll('.grid-item');
-            const titleElement = document.getElementById('location-title');
-            const descriptionElement = document.getElementById('location-description');
-            const addressElement = document.getElementById('location-address');
-            const mapElement = document.getElementById('location-map');
+        </div>
+        <div style="padding: 20px;">
+            <!-- เเยกเนื้อหา -->
+        </div>
+        <div id="section2" class="event">
 
-            gridItems.forEach(item => {
-                item.addEventListener('click', function () {
-                    const title = item.getAttribute('data-title');
-                    const description = item.getAttribute('data-description');
-                    const address = item.getAttribute('data-address');
-                    const mapSrc = item.getAttribute('data-map');
+        </div>
 
-                    titleElement.textContent = title;
-                    descriptionElement.textContent = description;
-                    addressElement.textContent = address;
-                    mapElement.src = mapSrc;
-                });
-            });
-        });
-    </script>
+        <div id="section3" class="event">
+
+        </div>
+
+        <div id="section4" class="event">
+
+        </div>
+        <div id="section5" class="event">
+
+        </div>
+    </section>
+    <footer>
+        <div class="footer-container">
+            <div class="footer-item">
+                <h3>About Us</h3>
+                <p>We are a team of passionate individuals dedicated to providing the best services and solutions.
+                </p>
+            </div>
+            <div class="footer-item">
+                <h3>Contact</h3>
+                <p>Email: info@example.com</p>
+                <p>Phone: +123 456 7890</p>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2024 Your Company Name. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
+
+<!-- 657 -->
+<!-- 430 -->
+<!-- 549 -->
+<!-- 785 -->
