--- a/tessB copy.html
+++ b/tessB copy.html
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
-        .grid-container {
-            
+        .grid-container{
+            width: 25%;
+            height: 750px;
+            padding: 20px;
+            float: left;
+            display: flex;
+            flex-direction: column;
+            overflow-y: auto;
         }
-        .grid-item {
-
+        .grid-item{
+            margin-bottom: auto;
+            position: relative;
         }
         .grid-item img{
 
@@ -17,16 +24,16 @@
         .grid-item img:hover{
 
         }
-        .image-text {
+        .image-text{
 
         }
-        .details-container {
+        .details-container{
 
         }
-        #location-title {
+        #location-title{
 
         }
-        #location-map {
+        #location-map{
 
         }
     </style>
