--- a/b.html
+++ b/b.html
@@ -7,24 +7,18 @@
     <title>Document</title>
     <style>
         .grid-container {
+            width: 25%;
+            height: 750px;
+            padding: 20px;
+            float: left;
             display: flex;
             flex-direction: column;
-            width: 25%;
-            float: left;
-            padding: 20px;
-            height: 750px;
             overflow-y: auto;
         }
 
         .grid-item {
             margin-bottom: 10px;
             position: relative;
-        }
-
-        .image-wrapper {
-            position: relative;
-            display: inline-block;
-            transition: transform 0.2s;
         }
 
         .grid-item img {
@@ -40,33 +34,28 @@
         }
 
         .image-text {
-            position: absolute;
+            width: 101%;
             bottom: 0;
             left: 0;
-            background: rgba(0, 0, 0, 0.5);
-            color: #fff;
-            width: 101%;
-            text-align: center;
             padding: 10px;
-            box-sizing: border-box;
             font-size: 16px;
-            border-bottom-left-radius: 4px;
-            border-bottom-right-radius: 4px;
-        }
-
-        .grid-item:hover .image-wrapper {
-            transform: scale(1.05);
+            border-radius: 0 0 4px 4px;
+            background: rgba(0, 0, 0, 0.5);
+            position: absolute;
+            color: #fff;
+            text-align: center;
+            box-sizing: border-box;
         }
 
         .details-container {
             margin-left: 30%;
             padding: 20px;
-            background: rgba(255, 255, 255, 0.6);
-            backdrop-filter: blur(0.5px);
-            border-left: 1px solid rgba(255, 255, 255, 0.3);
             height: 100vh;
-            position: relative;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            background: #fff9;
+            backdrop-filter: blur(0.5px);
+            border-left: 1px solid #fff5;
+            position: relative;
         }
 
         #location-title {
