--- a/Gally.html
+++ b/Gally.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>เครื่องหมายชี้ขึ้น</title>
+    <title>เลื่อน</title>
     <style>
         .container {
   display: flex;
