--- a/a.html
+++ b/a.html
@@ -63,8 +63,6 @@
         .navBar ul li a {
             font-size: 1.2rem;
             color: #fff;
-            font-weight: 400;
-            letter-spacing: 1.5px;
         }
 
         .navBar .logo a {
@@ -248,7 +246,7 @@
         </div>
 
     </div>
-    <div id="scrollDown" onclick="scrollToBottom()">
+    <div id="scrollDown">
         <span>↨เลื่อนลง</span>
     </div>
     <script>
