--- a/Pondtest copy.html
+++ b/Pondtest copy.html
@@ -83,33 +83,38 @@
         }
 
         .phuket {
-       color: #fff; 
-       padding:25px;
-       text-align: center;
-       width:100%;
+      color: #fff;
+      padding: 25px;
+      text-align: center;
+      width: 100%;
         }
 
         .card {
-       display: grid;
-       grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
-       grid-gap: 20px;
-       width: 100%;     
+      display:grid;
+      grid-template-columns: repeat(auto-fit,minmiax(200px,1fr));
+      grid-gap: 20px;
+      width: 100%;
         }
 
         .card h2 {
          color: #fff;
-            position: absolute;
-            bottom: 15px;
-            left: 20px;
-            font-size: 1.6rem;
-            letter-spacing: 1px;
-        }
+         position: absolute;
+         bottom: 15px;
+         left: 20px;
+         font-size: 1.6rem;
+         letter-spacing: 1px;
+
 
         .card .box1,
         .box2,
         .box3,
         .box4 {
-
+       width: 100%;
+       height: 220px;
+       background-position: center;
+       background-size: cover;
+       border-radius: 25px;
+       cursor: pointer;
         }
 
         .box1 {
@@ -153,9 +158,19 @@
         }
 
         #scrollDown {
-        position: fixed;
-        bottom:20px;
-        
+            position: fixed;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            display: none;
+            align-items: center;
+            background: rgba(0, 0, 0, 0.7);
+            color: white;
+            padding: 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 16px;
+            font-weight: bold;
         }
 
         #scrollDown:hover {
