--- a/c copy 4.html
+++ b/c copy 4.html
@@ -6,7 +6,8 @@
     <title>CodePen - Onscroll Animation: Dynamic Content Scroll with ScrollMagic</title>
     <style>
         * {
-            
+            padding: 0;
+            margin: 0;
         }
         body,
         html {
