--- a/main2 all.html
+++ b/main2 all.html
@@ -318,6 +318,7 @@
         #section5.event::before,
         #section6.event::before {
             background-color: rgba(86, 82, 76, 0.57);
+            background-color: #56524c91;/* เลือกใช้ */
         }
 
         #section2 {
@@ -344,8 +345,8 @@
 
         .footer-container {
             display: flex;
-            justify-content: space-between;
             flex-wrap: wrap;
+            justify-content: space-between;
             border-bottom: 2px solid #444;
             padding-bottom: 20px;
         }
@@ -556,6 +557,4 @@
 <!-- 572 -->
 <!-- 606 -->
 <!-- 657 -->
-<!-- 430 -->
-<!-- 549 -->
 <!-- 785 -->
