--- a/ฝึกhtml/js/CC.html
+++ b/ฝึกhtml/js/CC.html
@@ -33,12 +33,12 @@
 
         }
         #section2{
-
+            
         }
         #section3{
 
         }
-        #section4{
+        #scetion4{
 
         }
         #section5{
@@ -56,7 +56,7 @@
         .footer-item{
 
         }
-        .footer-item h2{
+        .footer-item h3{
 
         }
         .footer-item p{
@@ -65,33 +65,20 @@
         .footer-bottom{
 
         }
-        
     </style>
 </head>
 <body>
     <section class="events-page">
-        <div id="section1" class="event">
-
-        </div>
+        <div id="section1" class="event"></div>
         <div style="padding: 20px;"></div>
-        <div id="section1" class="event">
-
-        </div>
+        <div id="section2" class="event"></div>
         <div style="padding: 20px;"></div>
-        <div id="section1" class="event">
-
-        </div>
+        <div id="section3" class="event"></div>
         <div style="padding: 20px;"></div>
-        <div id="section1" class="event">
-
-        </div>
+        <div id="section4" class="event"></div>
         <div style="padding: 20px;"></div>
-        <div id="section1" class="event">
-
-        </div>
-        <div style="padding: 20px;"></div>
+        <div id="section5" class="event"></div>
     </section>
-
     <footer>
         <div class="footer-container">
             <div class="footer-item">
@@ -105,7 +92,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2024 PT.</p>
+            <p></p>
         </div>
     </footer>
 </body>
