--- a/ฝึกhtml/js/AA.html
+++ b/ฝึกhtml/js/AA.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,10 +17,10 @@
         .bg {
 
         }
-        .bg::after{
+        .bg::after {
 
         }
-        .navbar{
+        .navbar {
 
         }
         .navbar ul{
@@ -36,7 +35,7 @@
         .navbar .logo a{
 
         }
-        .content {
+        .content{
 
         }
         .phuket {
@@ -48,13 +47,16 @@
         .phuket p{
 
         }
+        .txt h1{
+
+        }
         .card {
 
         }
         .card h2{
 
         }
-        .card .box1,.box2,.box3,.box4 {
+        .card .box1,.box2,.box3,.box4{
 
         }
         .box1{
@@ -69,35 +71,31 @@
         .box4{
 
         }
-        .txt h1{
-
-        }
         .card div{
 
         }
         .card div:hover{
 
         }
-        #scrolldow{
+        #scrolldow {
 
         }
         #scrolldow:hover{
 
         }
-        #scrolldow::before {
+        #scrolldow::before{
 
         }
         #scrolldow span{
-            
+
         }
     </style>
 </head>
-
 <body>
     <div class="container bg">
         <div class="navbar">
             <div class="logo">
-                <a href="">logo</a>
+                <a href="">Logo</a>
             </div>
             <ul>
                 <li><a href=""></a></li>
@@ -106,7 +104,7 @@
                 <li><a href=""></a></li>
             </ul>
         </div>
-
+        
         <div class="content">
             <div class="phuket">
                 <div class="tnt">
@@ -116,8 +114,8 @@
                     <h1></h1>
                     <h1></h1>
                 </div>
-                <p></p>
             </div>
+
             <div class="card">
                 <a href="">
                     <div class="box1">
@@ -139,6 +137,7 @@
                         <h2></h2>
                     </div>
                 </a>
+
             </div>
         </div>
     </div>
@@ -150,14 +149,13 @@
         document.addEventListener('DOMContentLoaded',()=>{
             const scrollDow = document.getElementById('scrolldow');
             window.addEventListener('scroll',()=>{
-                scrollDow.style.display = window.scrollY = 0 ? 'display' : 'none';
-                scrollDow.style.display = window.scrollY = 0 ? '1' : '0';
-
+                scrollDow.style.display = window.scrollY = 0 ? 'flex' :'none';
+                scrollDow.style.opacity = window.scrollY = 0 ? '1':'0';
             });
-            window.addEventListener('click', ()=>{
-                window.scrollTo({ top : document.body.scrollHeight,behavior :'smooth'});
+            window.addEventListener('click',()=>{
+                window.scrollTo({top : document.body.scrollHeight,behavior:'smooth'});
             });
-        })
+        });
     </script>
 </body>
 </html>
